# video-navigator

./: .gitignore  README.md  vercel.json
backend/: Dockerfile  chapters.py  docker-compose.yml  pyproject.toml  screenshot.py  transcript.py
backend/app/: config.py  main.py
backend/app/screenshot/: screenshot.py  screenshot_service.py
backend/app/video_overview/: proxy_manager.py  video_overview.py  video_overview_deps.py  video_overview_schemas.py  video_overview_services.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: About.tsx  ErrorPage.tsx  ExampleList.tsx  HomePage.tsx  Layout.tsx  UserContext.tsx  VideoEmbed.tsx  VideoPage.tsx
frontend/src/styles/: custom-scrollbar.css  main.css  plyr.css
frontend/src/types/: plyr.d.ts
frontend/src/utils/: formatTime.ts
